# text-based-clusterer

./: .gitignore  README.md  setup.cfg  setup.py
src/text_based_clusterer/: __init__.py  clusterer.py
tests/: clusterer_test.py
